# grocery-list-service

./: README.md  db.sqlite3  package-lock.json  pyproject.toml
mysite/: settings.py  urls.py
mysite/flask/: database.ini  hello.py
recipes/: admin.py  models.py  schema.py  types.py  views.py
recipes/migrations/: 0001_initial.py  0002_recipe_calories_recipe_steps.py  0003_groceryitem.py  0004_groceryitem_quantity.py
