[tool.poetry]
name = "backend-app"
version = "0.1.0"
description = ""
authors = ["Anthony Rosario <aerosario5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
strawberry-graphql = "^0.227.3"
strawberry-graphql-django = "^0.39.2"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
